# ai-bullshit

./: .gitignore  AGENTS.md  Cargo.toml  README.md  benches  benches.rs  benches2  benches2.rs  benches3  benches3.rs  benches4  benches4.rs  benches5  benches5.rs  benches6  benches6.rs  benches7  benches7.rs  benches8  benches8.rs  clippy.sh  clippy_output.txt  commit_msg.txt  door_interaction.patch  draw_space_port_patch.txt  fix.patch  fix_boss_new.patch  fix_boss_rush.py  fix_clippy.patch  fix_clippy.py  fix_clippy2.patch  fix_clippy2.py  fix_clippy3.patch  fix_clippy_koth_zone.patch  fix_game_mode.py  fix_ghost.py  fix_main.py  fix_merge.py  fix_obstacle.patch  fix_powerup.py  (+98 more)
.github/workflows/: check-merge-conflicts.yml  deploy.yml  jules-auto-merge.yml  pages.yml
docs/: README.md
docs/architecture/: README.md
docs/entities/: README.md
docs/mechanics/: README.md
docs/ui/: README.md
snake_game/: Cargo.toml
snake_game/src/: main.rs
src/: color.rs  config.rs  game.rs  game.rs.orig  lib.rs  main.rs  snake.rs  ui.rs
src/game/: a_star_state.rs  achievement.rs  artifact.rs  beep.rs  bestiary.rs  boss.rs  boss_type.rs  bounty.rs  campaign_maps.rs  class.rs  companion.rs  craftable_item.rs  crop.rs  default_campaign_level.rs  default_elo.rs  default_lives.rs  default_skin.rs  default_unlocked_themes.rs  default_wrap_mode.rs  difficulty.rs  dungeon.rs  dungeon.rs.rej  egg.rs  equipment.rs  faction.rs  fish.rs  goblin.rs  (+33 more)
tests/: test_astar_entity_avoidance.rs  test_astar_uses_portals.rs  test_battle_pass.rs  test_black_hole.rs  test_boss_avoids_black_hole.rs  test_boss_blocks_all_paths.rs  test_boss_dynamic_avoid.rs  test_boss_laser_dynamic.rs  test_boss_phantom.rs  test_boss_rage_phase.rs  test_boss_uses_portals.rs  test_boss_variants.rs  test_boss_wrap_mode.rs  test_bot_avoids_black_hole.rs  test_bot_avoids_goblin.rs  test_bot_avoids_lightning.rs  test_bot_avoids_phantom.rs  test_bot_avoids_turrets.rs  test_bot_capture_the_flag.rs  test_bot_dungeon_crawler.rs  test_bot_targets_goblin.rs  test_bot_vs_bot_collision.rs  test_bullet_hell.rs  test_capture_the_flag.rs  test_chain_lightning.rs  test_chaos_mode.rs  test_decoy.rs  test_dodgeball_mode.rs  test_dynamic_avoid.rs  test_dynamic_avoid_boss.rs  test_elo_integration.rs  test_emp_powerup.rs  test_engineer_boss.rs  test_flood_mode.rs  test_flow_field.rs  test_flow_field_uses_portals.rs  test_ghost_replay.rs  test_gravity_mode.rs  test_is_safe_final_p.rs  test_is_safe_final_p_boss.rs  (+21 more)
(+2 files in other folders)
