[package]
name = "snake_game"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.27"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
libc = "0.2.186"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"

[dev-dependencies]
fastrand = "2.4.1"
