[package]
name = "snake_game"
version = "0.1.0"
edition = "2024"

[dependencies]
# crossterm = "0.27"
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
libc = "0.2.186"
getrandom = { version = "0.2.16", features = ["js"] }
tinycrossterm = "0.1.0"
wasm-bindgen = { version = "0.2.121", features = ["serde-serialize"] }
console_error_panic_hook = "0.1.7"
web-time = { version = "1.1.0", features = ["serde"] }

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"

[dev-dependencies]
fastrand = "2.4.1"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/main.rs"
