[package]
name = "snake_game"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "snake_game"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
crossterm = { version = "0.27", optional = true }
rand = "0.8"
clap = { version = "4.5", features = ["derive"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.8.1"
libc = { version = "0.2.186", optional = true }
getrandom = { version = "0.2.16", features = ["js"], optional = true }
wasm-bindgen = { version = "0.2.121", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
web-sys = { version = "0.3.98", features = ["Window", "Document", "HtmlElement", "Element", "Node", "Performance", "KeyboardEvent", "HtmlCanvasElement", "CanvasRenderingContext2d", "EventTarget"], optional = true }
wasm-bindgen-futures = { version = "0.4.71", optional = true }
web-time = "1.1.0"

[features]
default = ["cli"]
cli = ["crossterm", "clap", "libc"]
wasm = ["getrandom/js", "wasm-bindgen", "console_error_panic_hook", "web-sys", "wasm-bindgen-futures"]

[lints.clippy]
pedantic = "warn"
nursery = "warn"
allow_attributes = "warn"

[dev-dependencies]
fastrand = "2.4.1"
